--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "bootstrap": "^3.3.7",
     "filestack-js": "^3.25.0",
+    "ngx-image-cropper": "^6.2.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
